add command to documentation, put morph in vendor/bin

--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
     "ramsy/uuid": "Uuid transformation"
   },
   "minimum-stability": "dev",
+  "bin": ["morph"],
   "autoload": {
     "psr-4": {
       "Metamorph\\": "src/"
